--- a/Franchise vs non franchise.ipynb
+++ b/Franchise vs non franchise.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "#import stuff\n",
     "import pandas as pd\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +215,7 @@
        "6            $787,456,552             the nun             $363,676,447  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,21 +259,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6461035763.0\n",
-      "5023052348.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(franchise_2016_total)\n",
-    "print(nfranchise_2016_total)"
+    "#convert floats to ints\n",
+    "def convert_to_int(var):\n",
+    "    new_var = int(var)\n",
+    "    return new_var"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#convert ints to array\n",
+    "def int_total_array(var1,var2,var3):\n",
+    "    year_totals = [var1, var2, var3]\n",
+    "    return year_totals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#get values into df\n",
+    "franchise_2016_total_int = convert_to_int(franchise_2016_total)\n",
+    "franchise_2017_total_int = convert_to_int(franchise_2017_total)\n",
+    "franchise_2018_total_int = convert_to_int(franchise_2018_total)\n",
+    "\n",
+    "nfranchise_2016_total_int = convert_to_int(nfranchise_2016_total)\n",
+    "nfranchise_2017_total_int = convert_to_int(nfranchise_2017_total)\n",
+    "nfranchise_2018_total_int = convert_to_int(nfranchise_2018_total)\n",
+    "\n",
+    "fran_totals = np.asarray(int_total_array(franchise_2016_total_int,franchise_2017_total_int,franchise_2018_total_int))\n",
+    "nonfran_totals = np.asarray(int_total_array(nfranchise_2016_total_int, nfranchise_2017_total_int,nfranchise_2018_total_int))\n",
+    "\n",
+    "totals_array = [fran_totals, nonfran_totals]\n",
+    "total_array = np.asarray(totals_array)\n",
+    "total_array_df = pd.DataFrame(total_array)\n",
+    "total_array_df.columns\n",
+    "total_array_df.to_csv('fran_vs_nonfran.csv')"
    ]
   },
   {
