--- a/Month_data_4.ipynb
+++ b/Month_data_4.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook was used to compile the final set of data that was used, calculating a month out of the year and roi, and a few other tweaks to shore up the final data set."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -238,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +254,7 @@
        "'05'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +283,7 @@
        "pandas._libs.tslibs.timestamps.Timestamp"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,17 +294,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.loc[df['release_date'].isna(), 'release_date'] = '2018-11-09'\n",
-    "df['release_date'] = pd.to_datetime(df['release_date']"
+    "df['release_date'] = pd.to_datetime(df['release_date'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +326,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['month#'] = df['release_date'].dt.month.astype(np.int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -363,16 +379,16 @@
        "      <th>domestic_gross</th>\n",
        "      <th>worldwide_gross</th>\n",
        "      <th>...</th>\n",
+       "      <th>isRomance</th>\n",
        "      <th>isScify</th>\n",
        "      <th>isTVmovie</th>\n",
        "      <th>isThriller</th>\n",
        "      <th>isWar</th>\n",
        "      <th>isWestern</th>\n",
        "      <th>rounded_vote</th>\n",
-       "      <th>month_released</th>\n",
-       "      <th>month</th>\n",
        "      <th>month_year</th>\n",
        "      <th>roi</th>\n",
+       "      <th>month#</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -394,11 +410,11 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>6.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>05</td>\n",
        "      <td>May</td>\n",
        "      <td>154.667286</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
@@ -413,16 +429,16 @@
        "      <td>858373000.0</td>\n",
        "      <td>2.797801e+09</td>\n",
        "      <td>...</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>8.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>05</td>\n",
        "      <td>April</td>\n",
        "      <td>599.450141</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
@@ -437,16 +453,16 @@
        "      <td>459005868.0</td>\n",
        "      <td>1.403014e+09</td>\n",
        "      <td>...</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>7.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>05</td>\n",
        "      <td>April</td>\n",
        "      <td>324.384139</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
@@ -461,16 +477,16 @@
        "      <td>678815482.0</td>\n",
        "      <td>2.048360e+09</td>\n",
        "      <td>...</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>8.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>05</td>\n",
        "      <td>April</td>\n",
        "      <td>582.786585</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
@@ -490,15 +506,15 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>7.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>05</td>\n",
        "      <td>May</td>\n",
        "      <td>221.140142</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 36 columns</p>\n",
+       "<p>5 rows × 35 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -516,31 +532,24 @@
        "3   2018-04-25                       Avengers: Infinity War  300000000.0   \n",
        "4   2007-05-19     Pirates of the Caribbean: At World’s End  300000000.0   \n",
        "\n",
-       "   domestic_gross  worldwide_gross  ...  isScify  isTVmovie  isThriller  \\\n",
-       "0     241063875.0     1.045664e+09  ...        0          0           0   \n",
-       "1     858373000.0     2.797801e+09  ...        1          0           0   \n",
-       "2     459005868.0     1.403014e+09  ...        1          0           0   \n",
-       "3     678815482.0     2.048360e+09  ...        1          0           0   \n",
-       "4     309420425.0     9.634204e+08  ...        0          0           0   \n",
+       "   domestic_gross  worldwide_gross  ...  isRomance  isScify  isTVmovie  \\\n",
+       "0     241063875.0     1.045664e+09  ...          0        0          0   \n",
+       "1     858373000.0     2.797801e+09  ...          0        1          0   \n",
+       "2     459005868.0     1.403014e+09  ...          0        1          0   \n",
+       "3     678815482.0     2.048360e+09  ...          0        1          0   \n",
+       "4     309420425.0     9.634204e+08  ...          0        0          0   \n",
        "\n",
-       "   isWar  isWestern  rounded_vote  month_released  month  month_year  \\\n",
-       "0      0          0           6.0             NaN     05         May   \n",
-       "1      0          0           8.0             NaN     05       April   \n",
-       "2      0          0           7.0             NaN     05       April   \n",
-       "3      0          0           8.0             NaN     05       April   \n",
-       "4      0          0           7.0             NaN     05         May   \n",
+       "   isThriller  isWar  isWestern  rounded_vote  month_year         roi  month#  \n",
+       "0           0      0          0           6.0         May  154.667286       5  \n",
+       "1           0      0          0           8.0       April  599.450141       4  \n",
+       "2           0      0          0           7.0       April  324.384139       4  \n",
+       "3           0      0          0           8.0       April  582.786585       4  \n",
+       "4           0      0          0           7.0         May  221.140142       5  \n",
        "\n",
-       "          roi  \n",
-       "0  154.667286  \n",
-       "1  599.450141  \n",
-       "2  324.384139  \n",
-       "3  582.786585  \n",
-       "4  221.140142  \n",
-       "\n",
-       "[5 rows x 36 columns]"
+       "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
